# cloome

./: README.md  environment.yml  pyproject.toml
example/images/: ERSyto.tif  ERSytoBleed.tif  Hoechst.tif  Mito.tif  Ph_golgi.tif
src/clip/: clip.py  helpers.py  model.py
src/cloome/: model.py
src/notebooks/: modality_gap_cloome.ipynb  representation-visualization.ipynb  retrieval.ipynb  zeroshot_phenotype.ipynb  zeroshot_phenotype_cellprofiler.ipynb  zeroshot_phenotype_gapnet.ipynb
src/preprocess/: preprocess_image.py  preprocess_molecules.py
src/training/: data.py  datasets.py  linear_probing.py  main.py  methods.py  params.py  tox_dataset.py  train.py
src/training/model_configs/: RN50-pre.json  RN50.json
